# resolve-agent

./: .editorconfig  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT_2026-04-20.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  PLAN.md  PROJECT_COMPLETION.md  QUALITY_REPORT.md  README.md  ROADMAP.md  SECURITY.md  UNIMPLEMENTED.md  WEEK5_FIXES.md  WEEK6_FIXES.md  go.mod  go.sum
python/: pyproject.toml
python/skills/intelligent-selector/: manifest.yaml
python/src/resolveagent/: __init__.py
python/src/resolveagent/agent/: __init__.py  base.py  mega.py  memory.py  message.py
python/src/resolveagent/api/: __init__.py
python/src/resolveagent/code_analysis/: __init__.py  ast_parser.py  call_graph.py  engine.py  error_parser.py  solution_generator.py
python/src/resolveagent/corpus/: __init__.py  acquisition.py  call_chain_rag_generator.py  code_analysis_importer.py  config.py  fta_importer.py  fta_parser.py  importer.py  kudig_rag_import.py  progress.py  rag_importer.py  seed_vectorizer.py  skill_adapter.py  skill_importer.py
python/src/resolveagent/docsync/: __init__.py  cli.py  engine.py  glossary.py  models.py  processors.py
python/src/resolveagent/fta/: cut_sets.py  engine.py  evaluator.py  gates.py  serializer.py  tree.py  workflow.py
python/src/resolveagent/hooks/: __init__.py  memory_client.py  models.py  runner.py  selector_handlers.py
python/src/resolveagent/llm/: __init__.py  higress_provider.py  model_config.py  openai_compat.py  provider.py  qwen.py  wenxin.py  zhipu.py
python/src/resolveagent/rag/: dual_writer.py  pipeline.py
python/src/resolveagent/runtime/: __init__.py  __main__.py  engine.py  http_server.py  lifecycle.py  registry_client.py  server.py
python/src/resolveagent/selector/: __init__.py  cache.py  context_enricher.py  hook_selector.py  intent.py  protocol.py  router.py  selector.py  skill_selector.py
python/src/resolveagent/skills/: __init__.py  executor.py  loader.py  manifest.py  sandbox.py  solution.py  troubleshoot.py
python/src/resolveagent/store/: __init__.py  base_client.py  call_graph_client.py  code_analysis_client.py  fta_document_client.py  hook_client.py  memory_client.py  rag_document_client.py  skill_client.py  solution_client.py  traffic_capture_client.py  traffic_graph_client.py
python/src/resolveagent/telemetry/: tracing.py
python/src/resolveagent/traffic/: __init__.py  collector.py  engine.py  graph_builder.py  report_generator.py
python/src/resolvenet/: __init__.py
python/src/resolvenet/agent/: __init__.py  base.py  mega.py  message.py
python/src/resolvenet/fta/: __init__.py  cut_sets.py  engine.py  evaluator.py  serializer.py
python/src/resolvenet/llm/: __init__.py  model_config.py  openai_compat.py  qwen.py  wenxin.py  zhipu.py
python/src/resolvenet/rag/: __init__.py  pipeline.py
python/src/resolvenet/runtime/: context.py  engine.py  lifecycle.py  server.py
python/src/resolvenet/selector/: __init__.py  context_enricher.py  intent.py  router.py  selector.py
python/src/resolvenet/skills/: executor.py  loader.py  manifest.py
python/tests/: conftest.py
python/tests/fixtures/: sample_fta_tree.yaml
python/tests/integration/: test_corpus_import.py
python/tests/unit/: test_call_chain_rag_generator.py  test_chunker_headings.py  test_docsync.py  test_fta_engine.py  test_fta_parser.py  test_hook_selector.py  test_kudig_rag_import.py  test_mega_selector_modes.py  test_rag_pipeline.py  test_selector.py  test_selector_cache.py  test_selector_complete.py  test_skill_adapter.py  test_skill_loader.py  test_skill_selector.py
(+679 files in other folders)
